.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Messaging_Log__e.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Message_Code__c</fullName>
        <label>Message Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Result__c</fullName>
        <label>Result</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Service__c</fullName>
        <label>Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__WhatId__c</fullName>
        <label>WhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__WhoId__c</fullName>
        <label>WhoId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Messaging Log</label>
    <pluralLabel>Messaging Logs</pluralLabel>
</CustomObject>